# langchain-rag

./: README.md  config.py  docker-compose.yml  main.py  major pending.md  pyproject.toml  requirements.txt
api/: app.py
embeddings/: embedder.py
loaders/: text_loader.py
memory/: chat_memory.py
model/: connect.py
prompts/: rag_prompts.py
rag/: chain.py
vectorstore/: store.py
